# ReactBeat

./: .dockerignore  .gitattributes  .gitignore  PRD.md  README.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  pyproject.toml  reactbeat.spec
packaging/hooks/: pyi_rth_sounddevice_portaudio.py
packaging/linux/: Dockerfile  build.sh
scripts/: __init__.py  check.py
src/: __init__.py  app.py  cli.py  recent.py
src/audio/: __init__.py  analysis.py  loader.py  player.py
src/render/: __init__.py  braille.py  styles.py
src/sim/: __init__.py  fluid.py  particles.py  waves.py
tests/: test_core.py  test_phase1.py
